--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "moment": "^2.30.1",
     "react": "^19.2.0",
     "react-countdown": "^2.3.6",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.10.1",
     "recharts": "^3.5.1",
     "sweetalert2": "^11.26.4",
@@ -44,7 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^3.4.17",
     "vite": "^7.2.4"
   }
 }
